welcome.lessons.welcome.variables.Variables.scala.error
Variables:19: error: type mismatch;
 found   : Unit
 required: Boolean
if (y=x) {
     ^